Overflow fix

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -10,6 +10,7 @@ body {
     padding: 0;
     font-family: poppins, Arial, Helvetica, sans-serif;
     background-color: black;
+    overflow-x: hidden;
 }
 
 ul {
